Fix bug where CTA stylings were overlapping

--- a/src/components/AddWarehouseForm/AddWarehouseForm.scss
+++ b/src/components/AddWarehouseForm/AddWarehouseForm.scss
@@ -115,10 +115,10 @@ h2{
 }
 
 .CTA{
-    &--primary{
+    &--add-primary{
         margin: 1rem;
     }
-    &--secondary{
+    &--add-secondary{
         margin: 1rem;
     }
 }
