--- a/src/components/EditWarehouseForm/EditWarehouseForm.scss
+++ b/src/components/EditWarehouseForm/EditWarehouseForm.scss
@@ -114,10 +114,10 @@ h2{
 }
 
 .CTA{
-    &--primary{
+    &--edit-primary{
         margin: 1rem;
     }
-    &--secondary{
+    &--edit-secondary{
         margin: 1rem;
     }
 }
